Create configuration folders and files

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -44,5 +44,8 @@
     "python.defaultInterpreterPath": "./venv/bin/python",
     "python.analysis.typeCheckingMode": "basic",
     "cSpell.enabled": true,
-    "python.formatting.provider": "none"
+    "python.formatting.provider": "none",
+    "files.associations": {
+      "*.html": "django-html"
+    }
   }
