--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -47,5 +47,7 @@
     "python.formatting.provider": "none",
     "files.associations": {
       "*.html": "django-html"
-    }
+    },
+
+    "emmet.includeLanguages": {"django-html": "html"},
   }
